html code ready

--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fonts -->
-        
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
     <!-- /Fonts -->
-   
+    <link rel="icon" href="./images/title-icon.png">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Onlayn or Offline</title>
 </head>
 <body>
     
    
-
+	 <div class="wrapper">
+        <h1 class="checkStatus"></h1>
+    </div>
+	
+	
+<script src="./js/app.js"></script>
 </body>
 </html>
